--- a/yamlfiles/product.yml
+++ b/yamlfiles/product.yml
@@ -1,24 +1,24 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: order-deployment
+  name: product-deployment
   labels:
-    app: order
+    app: product
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: order
+      app: product
   template:
     metadata:
       labels:
-        app: order
+        app: product
     spec:
       containers:
-      - name: order
+      - name: product
         image: nanajanashia/k8s-demo-app:v1.0
         ports:
-        - containerPort: 2000
+        - containerPort: 3000
         env:
 
         - name: DB_URL
@@ -30,25 +30,25 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: orderservice
+  name: productservice
 spec:
   
   selector:
-    app: order
+    app: product
   ports:
     - protocol: TCP
-      port: 2000
-      targetPort: order
+      port: 3000
+      targetPort: product
     
 
 ---
 apiVersion: v1
 kind: Endpoints
 metadata:
-  name: orderservice
+  name: productservice
 subsets:
   - addresses:
     - ip: 127.0.0.1
     ports:
-    - name: order
-      port: 2000
+    - name: product
+      port: 3000
