--- a/yamlfiles/apiserver.yml
+++ b/yamlfiles/apiserver.yml
@@ -16,16 +16,16 @@ spec:
     spec:
       containers:
       - name: apiserver
-        image: nanajanashia/k8s-demo-app:v1.0
+        image: harish343/apigateway:1
         ports:
         - containerPort: 8000
         env:
-        - name: DB_URL
-          valueFrom:
-            configMapKeyRef:
-              name: mongo-config
-              key: mongo-url
----
+        - name: MONGODB_DB_URL
+          value: "mongodb://127.0.0.1:27017/users"
+        - name: REDIS_DB_URL
+          value: "127.0.0.1"
+        - name: REDIS_DB_PORT
+          value: "6379"
 apiVersion: v1
 kind: Service
 metadata:
