--- a/yamlfiles/mongo.yml
+++ b/yamlfiles/mongo.yml
@@ -32,3 +32,14 @@ spec:
     - protocol: TCP
       port: 27017
       targetPort: 27017
+
+apiVersion: v1
+kind: Endpoints
+metadata:
+  name: mongo-service
+subsets:
+  - addresses:
+    - ip: 127.0.0.1
+    ports:
+    - name: mongo
+      port: 27017
