--- a/yamlfiles/redis.yml
+++ b/yamlfiles/redis.yml
@@ -33,3 +33,14 @@ spec:
       port: 6379
       targetPort: 6379
 
+apiVersion: v1
+kind: Endpoints
+metadata:
+  name: redis-service
+subsets:
+  - addresses:
+    - ip: 127.0.0.1
+    ports:
+    - name: redis
+      port: 6379
+
