--- a/yamlfiles/mongo.yml
+++ b/yamlfiles/mongo.yml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1
+apiVersion: v1
 kind: Deployment
 metadata:
   name: mongo-deployment
@@ -32,6 +32,7 @@ spec:
     - protocol: TCP
       port: 27017
       targetPort: 27017
+---
 
 apiVersion: v1
 kind: Endpoints
